  * Type ctrl+return to enter a newline inside a grid.
  * Checking for defined accessors on links before passing to relation proxy (this enables custom code
    on relation modification without passing through RelationProxy).
  * Refuses to delete user node unless visitor is a manager.
  * Marks user as deleted and remove profile if node is destroyed.

== 1.2.6, 1.2.7 2013-08-16

* Major changes
  * Support for multiple domains (site alias) for a single site.
  * Added support for wkhtmltopdf (Thanks Jean-Baptiste).
  
* Minor changes
  * Added 'cmd' option for pdf brick. <== TODO: Document
  * Added 'local_ips' option to bricks.yml (used when pdf engine cannot render non-public assets). <== TODO: Document
  * Fixed dependency on newer versions of rails.
  
== 1.2.5 2013-07-15

* Major changes
 * To support video streaming: redirect on first document cache. WARNING: This 
   implies changes to vhost files !
 * WARN: Properties in list context do not resolve with first element anymore. "first" prefix needed.
 * Enable VirtualClass on native classes !
 * Added 'activity' brick which records visitor's last "seen_at" date. <== TODO: Document
 * Support for site alias (other domain pointing to same data) "rake mkalias". <== TODO: Document

* Minor changes
 * Fixed encode_params in Ajax requests.
 * Fixed cached path in vhost file.
 * Added "uuid" method (generates a unique id). <== TODO: Document
 * Added support for JSON String in [string_hash] <== TODO: Document
 * Added 'login_info' to Node.
 * Added 'group_names' to User class.
 * Fixed [headers] when 'Status' is set (change to redirect on 300).
 
== 1.2.4 2013-06-13

* Major changes
 * Added class filtering to Acl in 'create' action. <== TODO: Document
 * Uploading html files does not transform them into zafu (use .zafu ext for this)
 * Added file upload support from zena remote API.
 * Added 'content_type' regexp to force virtual class on Document creation. <== TODO: Document